--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
-[database]
+atabase]
 host = 127.0.0.1
 port = 3306
-user = WUT_database
-password = XZbBp63wSD
-database = WUT_database
+user = 
+password = 
+database = 
 table_prefix = wp
